fixed a bug where the nav links were pushed to the left on tablet and desktop screens by making the containing element for the hamburger and close icon have a display of none

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ ul li {
         margin: 0;
     }
     
-    .burger, .hide-navbar {
+    .navbar-toggle {
         display: none;
     }
 
